# MicroLLM

./: LICENSE  README.md  pyproject.toml
Readme/核心代码解析/: 01-transformer.py 模型主干.md  02-lora.py LoRA 参数高效微调.md  03-sft.py SFT 数据协议.md  04-data_loader.py 与 loss.py.md  05-generate_text.py 推理链路.md  06-chat.py 多轮对话系统.md  07-train_qwen_lora.py Qwen 迁移线核心.md  08-数据 pipeline 六步处理.md
Readme/项目全景图/: 01-项目总览.md  02-自研 MicroLLM 主线.md  03-推理与系统能力增强.md  04-Qwen 迁移与结构化输出主线.md  05-评测、验证与部署闭环.md  06-项目复盘与总结.md
configs/: sft_lora.json
model/: model.txt
scripts/: benchmark_kvcache.py  chat.py  generate_text.py  run_eval_prompts.py  run_instructie_eval.py  tokenize_corpus.py  train_pretrain.py  train_sft.py  train_tokenizer.py
src/inference/: prompting.py
src/model/: lora.py  transformer.py
src/tokenizer/: bpe.py  tokenizer.py
src/training/: data_loader.py
tests/: test_inference.py  test_lora.py  test_model.py  test_sft.py  test_tokenizer.py  test_training.py
